# RightPrintHelloWorld

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-architecture.md
src/print_hello_world/: __init__.py  __main__.py  cli.py  dto.py  service.py
tests/: test_cli.py  test_contract.py  test_service.py
